[gd_scene load_steps=2 format=3 uid="uid://c2yxg41vkcoi5"]

[ext_resource type="Script" uid="uid://bemqkl7e66x2u" path="res://scripts/inventory_item.gd" id="1_u4rwp"]

[node name="InventoryItem" type="PanelContainer" node_paths=PackedStringArray("placeholder_node")]
script = ExtResource("1_u4rwp")
placeholder_node = NodePath("Container/Placeholder")

[node name="Container" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="Placeholder" type="Control" parent="Container"]
texture_filter = 1
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
mouse_filter = 1

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
